<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">emergecare_app</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_any_important_n">Any important notes?</string>
<string name="msg_return_to_home">RETURN TO HOME SCREEN</string>
<string name="msg_sign_to_your_ac">Sign to your account</string>
<string name="msg_what_conditions2">WHAT CONDITIONS DO YOU HAVE?</string>
<string name="msg_qr_code_success">QR CODE SUCCESSFULLY GENERATED</string>
<string name="lbl_asthma">Asthma</string>
<string name="msg_what_allergies">what allergies do you have?</string>
<string name="msg_generate_qr_cod">Generate QR code</string>
<string name="msg_welcome_to_emer">Welcome to EMERGECARE</string>
<string name="msg_download_qr_co">DOWNLOAD  QR CODE</string>
<string name="msg_emergency_conta2">Emergency contact</string>
<string name="lbl_details">DETAILS</string>
<string name="lbl_about_us">ABOUT US</string>
<string name="lbl_digits_only">Digits only</string>
<string name="msg_allergies_a_s">ALLERGIES:
a. Sulphur
b. Fish
C. Sugar</string>
<string name="lbl_messages">MESSAGES</string>
<string name="msg_what_allergies2">wHAT ALLERGIES DO YOU HAVE?</string>
<string name="lbl_scan_qr_code">SCAN QR CODE</string>
<string name="msg_enter_health_de">ENTER HEALTH DETAILS</string>
<string name="lbl_emergecare">EMERGECARE</string>
<string name="msg_emergency_conta">EMERGENCY CONTACT: 0809657865</string>
<string name="msg_any_important_n2">ANY IMPORTANT NOTES?</string>
<string name="msg_the_future_of_h2">THE FUTURE OF HEALTH INFORMATION SYSTEMS</string>
<string name="msg_the_future_of_h">THE FUTURE OF HEALTH INFORMATION SYSYTEMS</string>
<string name="msg_relation_to_eme">relation to Emergency contact</string>
<string name="lbl_connect_wallet">Connect Wallet</string>
<string name="lbl_settings">SETTINGS</string>
<string name="msg_important_note">IMPORTANT NOTE:
In Case of an epileptic episode-
     1. Protect the person from injury.
     2. Time the seizure.
     3. Do not put anything in the person\u2019s
         mouth.
     4. Loosen tight clothing.
     5. After the seizure, turn the person on
          their side.</string>
<string name="msg_medicine_allerg">Medicine Allergies, First Aid Details...</string>
<string name="lbl_diabetes">Diabetes</string>
<string name="msg_name_desmond_e">NAME: Desmond Elliot</string>
<string name="lbl_age_14">AGE: 14</string>
<string name="msg_download_new_qr">DOWNLOAD NEW QR CODE</string>
<string name="lbl_epilepsy">Epilepsy</string>
<string name="msg_relation_to_pat">RELATION TO PATIENT: Father</string>
<string name="msg_what_conditions">What conditions do you have?</string>
<string name="msg_medical_conditi">MEDICAL CONDITIONS: Epilepsy</string>
<string name="msg_select_more_tha">Select more than one</string>
<string name="msg_congratulations">CONGRATULATIONS! YOU JUST EARNED AN NFT</string>
</resources>
