<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameStackprice"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_50">
        <FrameLayout android:id="@+id/frameDesignLight"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent" style="@style/groupStylegray_50">
            <FrameLayout android:id="@+id/frameStackbackgroundimag"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_146pxv"
                android:layout_marginBottom="@dimen/_10pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageBackgroundImag"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_146pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_backgroundimag_146x360}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_backgroundimag_146x360"/>
                <LinearLayout android:id="@+id/linearColumnarrowone"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content" android:orientation="vertical">
                    <ImageView android:id="@+id/imageArrowOne"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_3pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_27pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrow1"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
                    <View
                        android:background="@drawable/rectangle_bg_gray_900_radius_2"
                        android:id="@+id/viewRectangle"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_5pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_68pxv" android:layout_width="@dimen/_50pxh"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout android:id="@+id/linearColumnprice"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_900">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_26pxh"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_45pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/msg_enter_health_de"
                    style="@style/txtPlayfairDisplaybold24" tools:text="@string/msg_enter_health_de"/>
                <FrameLayout android:id="@+id/frameStackformcontrol"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_123pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_15pxv" android:layout_width="@dimen/_315pxh">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtFormControl"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingStart="@dimen/_20pxh"
                        android:paddingTop="@dimen/_16pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_diabetes"
                        style="@style/txtSolid" tools:text="@string/lbl_diabetes"/>
                    <LinearLayout android:id="@+id/linearForm"
                        android:layout_gravity="top|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtLabel"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginStart="@dimen/_1pxh"
                            android:layout_width="match_parent"
                            android:letterSpacing="0.07"
                            android:singleLine="true"
                            android:text="@string/msg_what_conditions"
                            android:textAllCaps="true"
                            style="@style/txtKarlaregular14" tools:text="@string/msg_what_conditions"/>
                        <LinearLayout
                            android:id="@+id/linearRowplaceholder"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8pxv"
                            android:layout_width="match_parent"
                            android:orientation="horizontal" style="@style/groupStylegray_901">
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtPlaceholder"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_14pxv"
                                android:layout_marginStart="@dimen/_21pxh"
                                android:layout_marginTop="@dimen/_16pxv"
                                android:layout_weight="0.9"
                                android:layout_width="0dp"
                                android:singleLine="true"
                                android:text="@string/msg_select_more_tha"
                                style="@style/txtKarlaregular16_1" tools:text="@string/msg_select_more_tha"/>
                            <ImageView android:id="@+id/imagePolygonOne"
                                android:layout_height="@dimen/_15pxh"
                                android:layout_marginBottom="@dimen/_15pxv"
                                android:layout_marginEnd="@dimen/_23pxh"
                                android:layout_marginStart="@dimen/_99pxh"
                                android:layout_marginTop="@dimen/_19pxv"
                                android:layout_width="@dimen/_16pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_polygon1"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_polygon1"/>
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>
                <TextView android:ellipsize="end" android:gravity="end"
                    android:id="@+id/txtFormControlOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_epilepsy"
                    style="@style/txtSolid" tools:text="@string/lbl_epilepsy"/>
                <TextView android:ellipsize="end" android:gravity="end"
                    android:id="@+id/txtFormControlTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_16pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_asthma"
                    style="@style/txtSolid" tools:text="@string/lbl_asthma"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLabelOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.07"
                    android:singleLine="true"
                    android:text="@string/msg_what_allergies"
                    android:textAllCaps="true"
                    style="@style/txtKarlaregular14" tools:text="@string/msg_what_allergies"/>
                <Spinner android:background="@color/gray_901"
                    android:gravity="end"
                    android:id="@+id/spinnerFormControlThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLabelTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_26pxh"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.07"
                    android:singleLine="true"
                    android:text="@string/msg_any_important_n"
                    android:textAllCaps="true"
                    style="@style/txtKarlaregular14" tools:text="@string/msg_any_important_n"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnMedicineAllergiesFirstAidDetails"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/msg_medicine_allerg"
                    android:textAllCaps="false"
                    style="@style/btnSolid_1" tools:text="@string/msg_medicine_allerg"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLabelThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.07"
                    android:singleLine="true"
                    android:text="@string/msg_emergency_conta2"
                    android:textAllCaps="true"
                    style="@style/txtKarlaregular14" tools:text="@string/msg_emergency_conta2"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_901"
                    android:ellipsize="end"
                    android:hint="@string/lbl_digits_only"
                    android:id="@+id/etGroupFourteen"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_14pxh"
                    android:paddingTop="@dimen/_16pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_400"
                    style="@style/etSolid_1" tools:ignore="Autofill"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnGenerateQrCodeOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@string/msg_generate_qr_cod"
                    android:textAllCaps="false"
                    style="@style/btnSolid_2" tools:text="@string/msg_generate_qr_cod"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
