<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnrectangle"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearDesignLight"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50">
            <FrameLayout android:id="@+id/frameStackrectangle"
                android:layout_height="@dimen/_106pxv" android:layout_width="match_parent">
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_2"
                    android:id="@+id/viewRectangle"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginEnd="@dimen/_147pxh"
                    android:layout_marginStart="@dimen/_147pxh"
                    android:layout_marginTop="@dimen/_15pxv" android:layout_width="@dimen/_50pxh"/>
                <FrameLayout android:id="@+id/frameStack211mintwo"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_106pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/image211minTwo"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_106pxh"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_211min2_106x360}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_211min2_106x360"/>
                    <ImageView android:id="@+id/imageArrowOne"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_3pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_27pxh"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="@dimen/_27pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrow1"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
                </FrameLayout>
            </FrameLayout>
            <LinearLayout android:id="@+id/linearColumnemergecare"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_900">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEMERGECARE"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_emergecare"
                    style="@style/txtPlayfairDisplaybold24" tools:text="@string/lbl_emergecare"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtLabel"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.07"
                    android:text="@string/msg_the_future_of_h"
                    android:textAllCaps="true"
                    style="@style/txtKarlaregular14" tools:text="@string/msg_the_future_of_h"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_901"
                    android:ellipsize="end"
                    android:hint="@string/msg_name_desmond_e"
                    android:id="@+id/etFormControl"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_3pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/white_A700"
                    style="@style/etSolid" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_901"
                    android:ellipsize="end"
                    android:hint="@string/lbl_age_14"
                    android:id="@+id/etAgeCounter"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_3pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_6pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/white_A700"
                    style="@style/etSolid" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_901"
                    android:ellipsize="end"
                    android:hint="@string/msg_emergency_conta"
                    android:id="@+id/etFormControlOne"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_9pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/white_A700"
                    style="@style/etSolid" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_901"
                    android:ellipsize="end"
                    android:hint="@string/msg_relation_to_pat"
                    android:id="@+id/etPrice" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/white_A700"
                    style="@style/etSolid" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtFormControlTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_1pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_6pxv"
                    android:singleLine="true"
                    android:text="@string/msg_medical_conditi"
                    style="@style/txtSolid" tools:text="@string/msg_medical_conditi"/>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearFormControl"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylegray_901">
                    <TextView android:gravity="start"
                        android:id="@+id/txtPriceOne"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_7pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="match_parent"
                        android:text="@string/msg_allergies_a_s"
                        style="@style/txtKarlaregular16" tools:text="@string/msg_allergies_a_s"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumndescription"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylegray_901">
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescription"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_8pxh"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent"
                        android:text="@string/msg_important_note"
                        style="@style/txtKarlaregular16" tools:text="@string/msg_important_note"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
